# ontology-agent

./: .gitignore  MVP_GUIDE.md  README.md  pyproject.toml
app/: __init__.py  agent.py  config.py
prompts/: kgqa_prompt.md  ontology_selector.md  uome_prompt.md
samples/: finance_sample.txt
scripts/: demo_pipeline.py
